--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,10 @@ trigger:
 pool:
   vmImage: 'macOS-10.13'
 steps:
+- task: Bash@3
+  inputs:
+    targetType: inline
+    script: brew install swig
 - task: CMake@1
   inputs:
     cmakeArgs: ../llvm -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
