--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,10 @@ steps:
 - task: CMake@1
   inputs:
     cmakeArgs: ../llvm -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
+- task: Bash@3
+  inputs:
+    targetType: inline
+    script: mkdir -p build/install
 - task: CMake@1
   inputs:
     cmakeArgs: .. --build -DCMAKE_INSTALL_PREFIX=$(Build.SourcesDirectory)/install . --target install
