--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,6 @@
 
 trigger:
 - master
-
 pool:
   vmImage: 'macOS-10.13'
 steps:
@@ -19,7 +18,7 @@ steps:
 - task: Bash@3
   inputs:
     targetType: inline
-    script: mkdir -p build/install
+    script: mkdir -p $(Build.SourcesDirectory)build/install
 - task: CMake@1
   inputs:
-    cmakeArgs: .. --build -DCMAKE_INSTALL_PREFIX=$(Build.SourcesDirectory)/install . --target install
+    cmakeArgs: .. --build -DCMAKE_INSTALL_PREFIX=$(Build.SourcesDirectory)build/install . --target install
