--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,23 @@ steps:
 - task: Bash@3
   inputs:
     targetType: inline
-    script: mkdir -p $(Build.SourcesDirectory)build/install
+    script: mkdir -p $(Build.BinariesDirectory)
 - task: CMake@1
   inputs:
-    cmakeArgs: .. --build -DCMAKE_INSTALL_PREFIX=$(Build.SourcesDirectory)build/install . --target install
+    cmakeArgs: .. --build -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) . --target install
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'tar'
+    tarCompression: 'gz'
+    archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).tar.gz
+    replaceExistingArchive: true
+- task: UniversalPackages@0
+  displayName: Universal Publish
+  inputs:
+    command: publish
+    publishDirectory: '$(Build.ArtifactStagingDirectory)'
+    vstsFeedPublish: 'dap-package-llvm'
+    vstsFeedPackagePublish: 'dap-llvm'
+    packagePublishDescription: '<Package description>'
