--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,14 +14,14 @@ steps:
     script: brew install swig
 - task: CMake@1
   inputs:
-    cmakeArgs: ../llvm -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
+    cmakeArgs: $(Build.SourcesDirectory)/llvm -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
 - task: Bash@3
   inputs:
     targetType: inline
     script: mkdir -p $(Build.BinariesDirectory)
 - task: CMake@1
   inputs:
-    cmakeArgs: .. --build -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) . --target install
+    cmakeArgs: $(Build.SourcesDirectory)/llvm --build -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) . --target install
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.BinariesDirectory)'
