--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
 - task: CMake@1
   inputs:
     workingDirectory: $(Build.BinariesDirectory)
-    cmakeArgs: $(Build.SourcesDirectory)/llvm -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
+    cmakeArgs: $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
 - task: Bash@3
   inputs:
     targetType: inline
@@ -23,10 +23,6 @@ steps:
 - task: CMake@1
   inputs:
     workingDirectory: $(Build.BinariesDirectory)
-    cmakeArgs: -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -P cmake_install.cmake
-- task: CMake@1
-  inputs:
-    workingDirectory: $(Build.BinariesDirectory)/build
     cmakeArgs: --build $(Build.BinariesDirectory) --target install
 - task: ArchiveFiles@2
   inputs:
