Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
     targetType: inline
     script: mkdir -p $(Build.BinariesDirectory)/build/install
 - task: CMake@1
+  timeoutInMinutes: 180
   inputs:
     workingDirectory: $(Build.BinariesDirectory)
     cmakeArgs: --build $(Build.BinariesDirectory) --target install
