--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,14 @@ steps:
   inputs:
     targetType: inline
     script: brew install swig
+- task: Bash@3
+  inputs:
+    targetType: inline
+    script: brew install ninja
 - task: CMake@1
   inputs:
     workingDirectory: $(Build.BinariesDirectory)
-    cmakeArgs: $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
+    cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
 - task: Bash@3
   inputs:
     targetType: inline
@@ -24,7 +28,7 @@ steps:
   timeoutInMinutes: 180
   inputs:
     workingDirectory: $(Build.BinariesDirectory)
-    cmakeArgs: --build $(Build.BinariesDirectory) --target install
+    cmakeArgs: -G Ninja --build $(Build.BinariesDirectory) --target install
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.BinariesDirectory)'
