--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,14 +16,14 @@ steps:
   inputs:
     targetType: inline
     script: brew install ninja
-- task: CMake@1
-  inputs:
-    workingDirectory: $(Build.BinariesDirectory)
-    cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
 - task: Bash@3
   inputs:
     targetType: inline
     script: mkdir -p $(Build.BinariesDirectory)/build/install
+- task: CMake@1
+  inputs:
+    workingDirectory: $(Build.BinariesDirectory)/build
+    cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
 - task: CMake@1
   timeoutInMinutes: 180
   inputs:
