Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
   timeoutInMinutes: 180
   inputs:
     workingDirectory: $(Build.BinariesDirectory)/build
-    cmakeArgs: -G Ninja --target install --build $(Build.BinariesDirectory)
+    cmakeArgs: -G Ninja --build . --target install
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(Build.BinariesDirectory)'
