--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
   - task: CMake@1
     inputs:
       workingDirectory: $(Build.BinariesDirectory)/build
-      cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_ENABLE_ASSERTIONS=OFF -DLLVM_ENABLE_PROJECTS="clang;libcxx;libcxxabi;lldb;compiler-rt;lld;polly" -DCOMPILER_RT_INCLUDE_TESTS=OFF -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
+      cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLDB_CODESIGN_IDENTITY='' -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_ENABLE_ASSERTIONS=OFF -DLLVM_ENABLE_PROJECTS="clang;libcxx;libcxxabi;lldb;compiler-rt;lld;polly" -DCOMPILER_RT_INCLUDE_TESTS=OFF -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
   - task: CMake@1
     inputs:
       workingDirectory: $(Build.BinariesDirectory)/build
