Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
   - task: CMake@1
     inputs:
       workingDirectory: $(Build.BinariesDirectory)/build
-      cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DLLVM_USE_SANITIZER="Address, Memory, MemoryWithOrigins, Undefined, Thread, " -LLVM_ENABLE_LTO=Full  -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLDB_CODESIGN_IDENTITY='' -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_ENABLE_ASSERTIONS=OFF -DCOMPILER_RT_INCLUDE_TESTS=OFF -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
+      cmakeArgs: -G Ninja $(Build.SourcesDirectory)/llvm -DLLVM_USE_SANITIZER="Address,Memory,MemoryWithOrigins,Undefined,Thread" -LLVM_ENABLE_LTO=Full -DCMAKE_INSTALL_PREFIX=$(Build.BinariesDirectory) -DLLDB_CODESIGN_IDENTITY='' -DLLVM_INCLUDE_EXAMPLES=OFF -DLLVM_INCLUDE_TESTS=OFF -DLLVM_INCLUDE_BENCHMARKS=OFF -DLLVM_ENABLE_ASSERTIONS=OFF -DCOMPILER_RT_INCLUDE_TESTS=OFF -DLLVM_ENABLE_PROJECTS=all -DCMAKE_BUILD_TYPE=Release
   - task: CMake@1
     inputs:
       workingDirectory: $(Build.BinariesDirectory)/build
