--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
   - task: Bash@3
     inputs:
       targetType: inline
-      script: xcode-select -switch /Applications/Xcode_10.0.0.app/Contents/Developer
+      script: xcode-select -switch /Applications/Xcode_10.0.0.app
   - task: CMake@1
     inputs:
       workingDirectory: $(Build.BinariesDirectory)/build
